--- a/workspace/pages/platform.dust
+++ b/workspace/pages/platform.dust
@@ -12,6 +12,11 @@
   {/params.section}
 {/title}
 
+{<header}
+<p class="hdr kilo read">A modern content management platform, built in support of the principles of <span class="txt--red"><a style="border:0" href="/{params.lang}/platform/concepts/api-first-and-cope/">API first and COPE</a></span>.</p>
+<p class="cf inline-block normal no-marg-i pad__bottom txt--grey">Learn more about the supporting concepts.</p>
+{/header} 
+
 {?params.section}
   {>"partials/platform/{params.section}" /}
 {:else}
