Testing meta description uniqueness

--- a/web/workspace/pages/about.dust
+++ b/web/workspace/pages/about.dust
@@ -1,7 +1,9 @@
 {>"partials/header" /}
 
-{<title}Working with…{/title}
-  
+{<title}Working with us{/title}
+
+{<description}An all senior team of engineers and digital practioners, patiinate about reimagining content management.{/description}
+
 <div class="container container--pad">
   <div class="grid">
     <div class="col w-1-2">
