--- a/web/workspace/partials/footer.dust
+++ b/web/workspace/partials/footer.dust
@@ -32,7 +32,7 @@
           <li><a href="/contact/">Contact us</a></li>
           <li><a href="/success-stories/">Success stories</a></li>
           <li><a href="/latest/">Latest</a></li>
-          <li><a href="/on-demand/">On demand</a></li>
+          <li><a href="/on-demand/" onclick="ga('send','event','On demand','Click','Footer');">On demand</a></li>
           <li><a href="/about/">Working with DADI</a>
           <li><a href="/careers/">Careers</a>
           <li><a href="/faq/">FAQ</a>
@@ -96,7 +96,7 @@
           <li><a href="/platform/roadmap/">Roadmap</a></li>
           {! <li><a href="/platform/licensing/">Licensing</a></li> !}
           <li>
-            <a href="http://docs.dadi.tech" target="_blank">
+            <a href="http://docs.dadi.tech" target="_blank" onclick="ga('send','event','Documentation','Click','Footer');">
             <img src="/assets/icons/pop-out.svg" class="alignv float--right" width="15">
             Documentation
             </a>
@@ -104,7 +104,7 @@
         </ul>
       </div>
       <div class="col w-1-3 pad__bottom">
-        <p class="normal hdr"><a href="/solutions/">Solutions</a></p>
+        <p class="normal hdr"><a href="/solutions/" onclick="ga('send','event','Solutions','Click','Footer');">Solutions</a></p>
         <ul class="list--line">
           <li><a href="/solutions/data-strategy/">Data strategy</a></li>
           <li><a href="/solutions/publishing/">Publishing</a></li>
