--- a/workspace/pages/support.dust
+++ b/workspace/pages/support.dust
@@ -2,24 +2,24 @@
 
 {<header}
 <h1 class="hdr kilo read txt--blue">Heavy lifting, when you need it</h1>
-<p class="inline-block normal read no-marg-i">Our solutions team can help you grow your business by optimising your data strategies and improving the way that you engage with your customers across all channels.</p>
+<p class="inline-block normal read no-marg-i">Our support team can help you grow your business by optimising your data strategies and improving the way that you engage with your customers across all channels.</p>
 <p class="pad__top"><a href="/{params.lang}/success-stories/" class="btn btn--blue normal">See success stories</a></p>
 {/header}
 
 {<title}
   {?params.solution}
-    {solutions.results[0].title}
+    {support.results[0].title}
   {:else}
     Solutions
   {/params.solution}
 {/title}
 
 {?params.solution}
-  {#solutions.results}
-    {>"partials/solutions/solution" /}
-  {/solutions.results}
+  {#support.results}
+    {>"partials/support/solution" /}
+  {/support.results}
 {:else}
-  {>"partials/solutions/index" /}
+  {>"partials/support/index" /}
 {/params.solution}
 
 {>"partials/footer" /}
