--- a/workspace/partials/footer.dust
+++ b/workspace/partials/footer.dust
@@ -104,15 +104,15 @@
         </ul>
       </div>
       <div class="col w-1-3 pad__bottom">
-        <p class="normal hdr"><a href="/{params.lang}/solutions/">Solutions</a></p>
+        <p class="normal hdr"><a href="/{params.lang}/support/">Support</a></p>
         <ul class="list--line">
-          <li><a href="/{params.lang}/solutions/data-strategy/">Data strategy</a></li>
-          <li><a href="/{params.lang}/solutions/publishing/">Publishing</a></li>
-          <li><a href="/{params.lang}/solutions/product-development/">Product development</a></li>
-          <li><a href="/{params.lang}/solutions/crm/">CRM</a></li>
-          <li><a href="/{params.lang}/solutions/analytics/">Analytics</a></li>
-          <li><a href="/{params.lang}/solutions/content-personalisation/">Content personalisation</a></li>
-          <li><a href="/{params.lang}/solutions/commerce/">Commerce</a></li>
+          <li><a href="/{params.lang}/support/data-strategy/">Data strategy</a></li>
+          <li><a href="/{params.lang}/support/publishing/">Publishing</a></li>
+          <li><a href="/{params.lang}/support/product-development/">Product development</a></li>
+          <li><a href="/{params.lang}/support/crm/">CRM</a></li>
+          <li><a href="/{params.lang}/support/analytics/">Analytics</a></li>
+          <li><a href="/{params.lang}/support/content-personalisation/">Content personalisation</a></li>
+          <li><a href="/{params.lang}/support/commerce/">Commerce</a></li>
         </ul>
       </div>
     </div>
