--- a/workspace/partials/support/list.dust
+++ b/workspace/partials/support/list.dust
@@ -4,13 +4,13 @@
       <p class="hdr larger txt--blue">{module-title}</p>
     {:else}
       <p class="hdr larger txt--blue">Heavy lifting, when you need it</p>
-      <p class="normal">Our solutions team can help you grow your business by optimising your data strategies and improving the way that you engage with your customers across all channels.</p>
+      <p class="normal">Our support team can help you grow your business by optimising your data strategies and improving the way that you engage with your customers across all channels.</p>
     {/module-title}
 
     <ul class="list--quotes normal cf grid pad__top">
-      {#solutions.results}
+      {#support.results}
         <li class="col w-1-3 bs-w-1-1 marg__bottom--x2">
-          <a class="block zoom" href="/{params.lang}/solutions/{handle}/">
+          <a class="block zoom" href="/{params.lang}/support/{handle}/">
             <div class="inline-block alignv marg__right">
               <img src="/assets/icons/white/{icon}.svg" height="70">
             </div>
@@ -19,9 +19,9 @@
             </strong>
           </a>
         </li>
-      {/solutions.results}
+      {/support.results}
     </ul>
 
-    <p><a href="/{params.lang}/solutions/" class="btn btn--blue">More about solutions we offer</a></p>
+    <p><a href="/{params.lang}/support/" class="btn btn--blue">More about support we offer</a></p>
   </div>
 </div>
