--- a/workspace/pages/index.dust
+++ b/workspace/pages/index.dust
@@ -151,7 +151,7 @@
   </div>
 </div>
 
-{>"partials/content-modules/products" /}
+{>"partials/products" /}
 
 <div class="bdr__bottom" style="border-color:#f2f2f2">
   <div class="container cf">
