--- a/workspace/partials/footer.dust
+++ b/workspace/partials/footer.dust
@@ -40,61 +40,61 @@
         </ul>
       </div>
       <div class="col w-1-3 pad__bottom">
-        <p class="normal hdr"><a href="/{params.lang}/platform/">Platform</a></p>
+        <p class="normal hdr"><a href="/{params.lang}/">Technology</a></p>
         <ul class="list--line">
           <li>
-            <a href="/{params.lang}/platform/api/" class="fwb">
+            <a href="/{params.lang}/api/" class="fwb">
             <img src="/assets/products/dadi-api.png" class="alignv float--right" width="15">
             API
             </a>
           </li>
           <li>
-            <a href="/{params.lang}/platform/web/" class="fwb">
+            <a href="/{params.lang}/web/" class="fwb">
             <img src="/assets/products/dadi-web.png" class="alignv float--right" width="19">
             Web
             </a>
           </li>
           <li>
-            <a href="/{params.lang}/platform/publish/" class="fwb">
+            <a href="/{params.lang}/publish/" class="fwb">
             <img src="/assets/products/dadi-publish.png" class="alignv float--right" width="15">
             Publish
             </a>
           </li>
           <li>
-            <a href="/{params.lang}/platform/cdn/" class="fwb">
+            <a href="/{params.lang}/cdn/" class="fwb">
             <img src="/assets/products/dadi-cdn.png" class="alignv float--right" width="15">
             CDN
             </a>
           </li>
           {! <li>
-            <a href="/{params.lang}/platform/track/" class="fwb">
+            <a href="/{params.lang}/track/" class="fwb">
             <img src="/assets/products/dadi-track.png" class="alignv float--right" width="15">
             Track
             </a>
           </li>
           <li>
-            <a href="/{params.lang}/platform/visualize/" class="fwb">
+            <a href="/{params.lang}/visualize/" class="fwb">
             <img src="/assets/products/dadi-visualize.png" class="alignv float--right" width="19">
             Visualize
             </a>
           </li>
           <li>
-            <a href="/{params.lang}/platform/predict/" class="fwb">
+            <a href="/{params.lang}/predict/" class="fwb">
             <img src="/assets/products/dadi-predict.png" class="alignv float--right" width="15">
             Predict
             </a>
           </li>
           <li>
-            <a href="/{params.lang}/platform/identity/" class="fwb">
+            <a href="/{params.lang}/identity/" class="fwb">
             <img src="/assets/products/dadi-identity.png" class="alignv float--right" width="8">
             Identity
             </a>
           </li> !}
-          <li><a href="/{params.lang}/platform/concepts/">Concepts</a></li>
-          {! <li><a href="/{params.lang}/platform/tools/">Tools &amp; Components</a></li> !}
-          <li><a href="/{params.lang}/platform/security/">Security</a></li>
-          <li><a href="/{params.lang}/platform/roadmap/">Roadmap</a></li>
-          {! <li><a href="/{params.lang}/platform/licensing/">Licensing</a></li> !}
+          <li><a href="/{params.lang}/concepts/">Concepts</a></li>
+          {! <li><a href="/{params.lang}/tools/">Tools &amp; Components</a></li> !}
+          <li><a href="/{params.lang}/security/">Security</a></li>
+          <li><a href="/{params.lang}/roadmap/">Roadmap</a></li>
+          {! <li><a href="/{params.lang}/licensing/">Licensing</a></li> !}
           <li>
             <a href="http://docs.dadi.tech" rel="noopener">
             <img src="/assets/icons/pop-out.svg" class="alignv float--right" width="15">
