--- a/web/workspace/partials/content-modules/developers.dust
+++ b/web/workspace/partials/content-modules/developers.dust
@@ -34,7 +34,7 @@
       </li>
       <li class="col w-1-2 pad__bottom--x2">
         <div class="block"><img src="/assets/icons/white/bolt.svg" height="70"></div>
-        <p class="hdr medium">It’s lightening fast</p>
+        <p class="hdr medium">It’s lightning fast</p>
         <p class="normal">“DADI delivers the performance we need when we need it.”</p>
       </li>
     </ul>
